--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,12 +23,9 @@ micronaut.router.static-resources.swagger-ui.mapping=/swagger-ui/**
 
 # ✅ Desativa completamente a segurança (evita erro 401 em todas as rotas)
 micronaut.security.enabled=false
-
-# ⛔️ Remover essas rotas específicas abaixo, pois só fazem sentido se a segurança estiver ativada
-#micronaut.security.intercept-url-map[0].pattern=/login/**
-#micronaut.security.intercept-url-map[0].http-method=GET
-#micronaut.security.intercept-url-map[0].access=permitAll
-
-#micronaut.security.intercept-url-map[1].pattern=/login
-#micronaut.security.intercept-url-map[1].http-method=POST
-#micronaut.security.intercept-url-map[1].access=permitAll
+micronaut.views.thymeleaf.enabled=true
+micronaut.views.thymeleaf.suffix=.html
+micronaut.views.thymeleaf.folder=classpath:views
+micronaut.router.static-resources.default.mapping=/
+micronaut.router.static-resources.default.paths=classpath:public
+micronaut.router.static-resources.default.redirect-to=/login
