--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ micronaut.application.name=lista
 # Banco de dados
 datasources.default.url=jdbc:mysql://localhost:3306/lista
 datasources.default.username=root
-datasources.default.password=root
+datasources.default.password=senhaSegura123
 datasources.default.driver-class-name=com.mysql.cj.jdbc.Driver
 datasources.default.dialect=MYSQL
 datasources.default.db-type=mysql
@@ -20,8 +20,6 @@ micronaut.router.static-resources.swagger.mapping=/swagger/**
 micronaut.router.static-resources.swagger-ui.paths=classpath:META-INF/swagger/views/swagger-ui
 micronaut.router.static-resources.swagger-ui.mapping=/swagger-ui/**
 
-
-# ✅ Desativa completamente a segurança (evita erro 401 em todas as rotas)
 micronaut.security.enabled=false
 micronaut.views.thymeleaf.enabled=true
 micronaut.views.thymeleaf.suffix=.html
