--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ micronaut.application.name=lista
 # Banco de dados
 datasources.default.url=jdbc:mysql://localhost:3306/lista
 datasources.default.username=root
-datasources.default.password=senhaSegura123
+datasources.default.password=root
 datasources.default.driver-class-name=com.mysql.cj.jdbc.Driver
 datasources.default.dialect=MYSQL
 datasources.default.db-type=mysql
